tests/ui/macros/vec-macro-in-pattern.stderr
error: arbitrary expressions aren't allowed in patterns
  --> $DIR/vec-macro-in-pattern.rs:7:14
   |
LL |         Some(vec![43]) => {}
   |              ^^^^^^^^
   |
   = note: maybe the pattern comes from a macro meta variable?
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

